--- a/Bookworm/Bookworm/Info.plist
+++ b/Bookworm/Bookworm/Info.plist
@@ -44,6 +44,8 @@
 		<key>NSExceptionDomains</key>
 		<dict/>
 	</dict>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2016 Syzygy. All rights reserved.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
