Add WebSocket manager class, setup App logging analytics by AOP

--- a/Bookworm/Podfile
+++ b/Bookworm/Podfile
@@ -5,6 +5,7 @@ inhibit_all_warnings!
 target 'Bookworm' do
 
 pod 'AFNetworking'
+pod 'SocketRocket'
 pod 'SDWebImage'
 pod 'RegExCategories'
 pod 'pop'
