--- a/Bookworm/Bookworm/Configs/app-setting.plist
+++ b/Bookworm/Bookworm/Configs/app-setting.plist
@@ -9,11 +9,19 @@
 		<key>host</key>
 		<string>www.bookworm.cc</string>
 		<key>port</key>
-		<real>8080</real>
+		<integer>80</integer>
 	</dict>
 	<key>isAppUpdated</key>
 	<true/>
 	<key>isShowUserGuide</key>
 	<true/>
+	<key>socialAppKey</key>
+	<string></string>
+	<key>analyticsAppKey</key>
+	<string></string>
+	<key>refererPrefix</key>
+	<string>http://www.bookworm.com/api/%@/%@</string>
+	<key>appStoreURLString</key>
+	<string>https://itunes.apple.com/us/app/bookworm/id1060072331?l=%@&amp;ls=1&amp;mt=8</string>
 </dict>
 </plist>
