--- a/Bookworm/Bookworm/Configs/app-setting.plist
+++ b/Bookworm/Bookworm/Configs/app-setting.plist
@@ -7,12 +7,20 @@
 	<key>isShowUserGuide</key>
 	<true/>
 	<key>signatureSalt</key>
-	<string>b6c0674f65fb72a5d8295e9e9c765eb87d2745ff</string>
+	<string>6d7fc1d86e4f0cdf5f3321f393702f89dbecb691</string>
 	<key>umengAppKey</key>
 	<string>5335438f6c738f4e13000039</string>
 	<key>httpServer</key>
 	<string>http://www.bookworm.cc:80/api</string>
-	<key>appStoreURLString</key>
+	<key>appAddress</key>
 	<string>https://itunes.apple.com/us/app/bookworm/id1060072331?l=%@&amp;ls=1&amp;mt=8</string>
+	<key>featureURL</key>
+	<string>http://www.bookworm.cc/feature</string>
+	<key>faqURL</key>
+	<string>http://www.bookworm.cc/faq</string>
+	<key>termsURL</key>
+	<string>http://www.bookworm.cc/terms</string>
+	<key>privacyURL</key>
+	<string>http://www.bookworm.cc/privacy</string>
 </dict>
 </plist>
