--- a/Bookworm/Bookworm/Info.plist
+++ b/Bookworm/Bookworm/Info.plist
@@ -46,6 +46,10 @@
 	</dict>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2016 Syzygy. All rights reserved.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
