--- a/Bookworm/Bookworm/Configs/app-setting.plist
+++ b/Bookworm/Bookworm/Configs/app-setting.plist
@@ -10,10 +10,14 @@
 	<string>6d7fc1d86e4f0cdf5f3321f393702f89dbecb691</string>
 	<key>umengAppKey</key>
 	<string>5335438f6c738f4e13000039</string>
+	<key>cameraSettingURL</key>
+	<string>prefs:root=Privacy&amp;path=CAMERA</string>
+	<key>photosSettingURL</key>
+	<string>prefs:root=Privacy&amp;path=PHOTOS</string>
+	<key>microphoneSettingURL</key>
+	<string>prefs:root=Privacy&amp;path=MICROPHONE</string>
 	<key>httpServer</key>
 	<string>http://www.bookworm.cc:80/api</string>
-	<key>appAddress</key>
-	<string>https://itunes.apple.com/us/app/bookworm/id1060072331?l=%@&amp;ls=1&amp;mt=8</string>
 	<key>featureURL</key>
 	<string>http://www.bookworm.cc/feature</string>
 	<key>faqURL</key>
@@ -22,5 +26,7 @@
 	<string>http://www.bookworm.cc/terms</string>
 	<key>privacyURL</key>
 	<string>http://www.bookworm.cc/privacy</string>
+	<key>appAddress</key>
+	<string>https://itunes.apple.com/us/app/bookworm/id1060072331?l=%@&amp;ls=1&amp;mt=8</string>
 </dict>
 </plist>
