--- a/Bookworm/Bookworm/Configs/app-setting.plist
+++ b/Bookworm/Bookworm/Configs/app-setting.plist
@@ -5,7 +5,7 @@
 	<key>isAppUpdated</key>
 	<true/>
 	<key>isShowUserGuide</key>
-	<true/>
+	<false/>
 	<key>umengAppKey</key>
 	<string>5335438f6c738f4e13000039</string>
 	<key>httpServer</key>
