Change init method by delete self.property

--- a/Bookworm/Bookworm/Info.plist
+++ b/Bookworm/Bookworm/Info.plist
@@ -46,6 +46,8 @@
 	</dict>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2016 Syzygy. All rights reserved.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string></string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
